# pybind11_boilerplate

./: .gitignore  CMakeLists.txt  conf-env  readme.md  requirements.txt  set_env.sh
include/: mylib.h  mytorch.h
python/: run.py
src/: pywrap.cpp  trytorch.cpp
